[package]
name = "yv-streamer-software"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
http = "1"
jpeg-encoder = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
v4l = "0.14"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
